# bullshit_plus_plus

./: Cargo.toml  README.md  expanded.rs
src/: lib.rs  main.rs
src/generators/: actions.rs  features.rs  full_names.rs  languages.rs  mod.rs  prefixes.rs  product_names.rs
src/generators/catch_phrases/: er.rs  ing.rs  mod.rs
src/generators/logo/: divide.rs  frame.rs  mod.rs  unsplash.rs
src/generators/origin_story/: beginning.rs  locations.rs  middle.rs  mod.rs  rooms.rs
