[package]
name = "bullshit_plus_plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
# Random generation
rand = "*"
getrandom = "*"
rand_xoshiro = "*"
rand_derive2 = { git = "https://github.com/StratusFearMe21/rand_derive2" }

# Command line utilities
structopt = "*"
const_colors = "*"

# Encoding
serde_json = "*"
base91 = "*"
horrorshow = "*"

# Unsplash
reqwest = "*"
tokio = { version = "*", features = ["rt"] }
futures = "*"

# Misc
once_cell = "*"
tiny-skia = "*"
anyhow = "*"
dotenv_codegen = "*"

# Unsafe
libloading = "*"
unchecked_unwrap = "*"
memmap = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
